make banner image responsive

--- a/css/main.css
+++ b/css/main.css
@@ -402,10 +402,10 @@ a {
 }
 
 #banner {
-    margin: 0px auto;
-    width: 1000px;
-    height: 340px;
-    background: url(../img/img03.png) no-repeat left bottom;
+	width: 100%;
+	height: auto;
+	margin: 0px auto;
+  background: url(../img/img03.png) no-repeat left bottom;
 }
 
 .list-style1 {
