use better default border-box for box-sizing

--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,13 @@
+html {
+	box-sizing: border-box;
+}
+
+*,
+*:before,
+*:after {
+	box-sizing: inherit;
+}
+
 body {
     margin: 0;
     padding: 0;
@@ -58,7 +68,6 @@ a {
 /* Logo */
 
 #logo {
-    width: 300px;
     margin: 0;
     padding: 0;
     color: #FFFFFF;
