--- a/css/main.css
+++ b/css/main.css
@@ -17,7 +17,6 @@ body {
     padding: 0;
     background: #050505 url(../img/img01.jpg) repeat;
     font-family: Arial, Helvetica, sans-serif;
-    font-size: 14px;
     color: #5B5B5B;
 }
 
@@ -166,13 +165,12 @@ a {
 #menu a {
     display: block;
     line-height: 100px;
-    padding: 0px 20px 0px 20px;
+    padding: 0.9px 1em;
     text-decoration: none;
     text-align: center;
     text-shadow: 1px 1px 0px rgba(0,0,0,.2);
     text-transform: uppercase;
     font-family: 'Oswald', sans-serif;
-    font-size: 16px;
     font-weight: 300;
     color: #1F1F1F;
     border: none;
