--- a/css/main.css
+++ b/css/main.css
@@ -207,6 +207,13 @@ a {
 #page {
     margin: 0 auto;
     padding: 30px 0px;
+
+}
+
+#page::after {
+	content: ' ';
+	display: block;
+	clear: both;
 }
 
 /* Content */
@@ -348,7 +355,6 @@ a {
 /* Footer */
 
 #footer {
-		clear: both;
 		margin: 0 auto;
     padding: 50px 0 15px 0;
     font-family: 'Abel', sans-serif;
