visually hide headings that are only for screenreaders

--- a/css/main.css
+++ b/css/main.css
@@ -12,6 +12,18 @@ html {
 	max-width: 1000px;
 }
 
+.visuallyhidden {
+    border: 0;
+    clip: rect(0 0 0 0);
+    height: 1px;
+    margin: -1px;
+    overflow: hidden;
+    padding: 0;
+    position: absolute;
+    width: 1px;
+    white-space: nowrap; /* 1 */
+}
+
 body {
     margin: 0;
     padding: 0;
